--- a/cliente-fc/client/package.json
+++ b/cliente-fc/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
+    "sweetalert2": "^11.26.17",
     "tar": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
